--- a/filter.ipynb
+++ b/filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def label_joke(label):\n",
     "    #Labels the current joke and moves to the next.\n",
     "    global joke_text_var\n",
@@ -54,26 +55,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if labeled_jokes.json already exists, load it if it does\n",
-    "if os.path.exists(\"labeled_jokes.json\"):\n",
-    "    with open(\"labeled_jokes.json\", \"r\") as f:\n",
+    "# if os.path.exists(\"labeled_jokes.json\"):\n",
+    "#     with open(\"labeled_jokes.json\", \"r\") as f:\n",
+    "#         labeled = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if labeled_jokes.json already exists, load it if it does\n",
+    "if os.path.exists(\"validation_jokes.json\"):\n",
+    "    with open(\"validation_jokes.json\", \"r\") as f:\n",
     "        labeled = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save labeled jokes to a JSON file\n",
+    "# def save_and_exit():\n",
+    "#     #Saves labeled data to a file and closes the GUI.\n",
+    "#     with open(\"labeled_jokes.json\", \"w\") as f:\n",
+    "#         json.dump(labeled, f, indent=4)\n",
+    "    \n",
+    "#     root.destroy()\n",
+    "#     print(\"Labeling complete! Data saved to labeled_jokes.json\")\n",
+    "\n",
+    "\n",
     "def save_and_exit():\n",
     "    #Saves labeled data to a file and closes the GUI.\n",
-    "    with open(\"labeled_jokes.json\", \"w\") as f:\n",
+    "    with open(\"validation_jokes.json\", \"w\") as f:\n",
     "        json.dump(labeled, f, indent=4)\n",
     "    \n",
     "    root.destroy()\n",
@@ -82,14 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeling complete! Data saved to labeled_jokes.json\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up GUI\n",
     "root = tk.Tk()\n",
     "root.title(\"Joke Labeling Tool\")\n",
-    "root.geometry(\"600x400\")  # Set the window size to 600x400\n",
+    "root.geometry(\"700x500\")  # Set the window size to 600x400\n",
     "\n",
     "# Variable to hold the joke text\n",
     "joke_text_var = tk.StringVar()\n",
@@ -101,13 +131,13 @@
     "joke_label = tk.Label(root, textvariable=joke_text_var, wraplength=500, font=(\"Arial\", 15))\n",
     "joke_label.pack(pady=20)\n",
     "\n",
-    "btn_appropriate = tk.Button(root, text=\"Appropriate (1)\", command=lambda: label_joke(1), height=25, width=40)\n",
+    "btn_appropriate = tk.Button(root, text=\"Appropriate (1)\", command=lambda: label_joke(1), height=5, width=40)\n",
     "btn_appropriate.pack(pady=7)\n",
     "\n",
-    "btn_inappropriate = tk.Button(root, text=\"Inappropriate (0)\", command=lambda: label_joke(0), height=25,width=40)\n",
+    "btn_inappropriate = tk.Button(root, text=\"Inappropriate (0)\", command=lambda: label_joke(0), height=5,width=40)\n",
     "btn_inappropriate.pack(pady=7)\n",
     "\n",
-    "btn_exit = tk.Button(root, text=\"Finish Labeling\", command=save_and_exit, height=25,width=40)\n",
+    "btn_exit = tk.Button(root, text=\"Finish Labeling\", command=save_and_exit, height=5,width=40)\n",
     "btn_exit.pack(pady=13)\n",
     "\n",
     "# Run the GUI\n",
